--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,11 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Pruebas proyecto
+application.vendor=dugla
+auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,10 +34,35 @@ dist.jar=${dist.dir}/Pruebas_proyecto.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Pruebas_proyecto
+endorsed.classpath=
 excludes=
+file.reference.AbsoluteLayout.jar=C:\\Program Files\\NetBeans-23\\netbeans\\java\\modules\\ext\\AbsoluteLayout.jar
+file.reference.AbsoluteLayout.jar-1=libs/AbsoluteLayout.jar
+file.reference.gs-algo-2.0.jar=..\\..\\..\\Downloads\\gs-algo-2.0.jar
+file.reference.gs-algo-2.0.jar-1=libs/gs-algo-2.0.jar
+file.reference.gs-core-2.0.jar=..\\..\\..\\Downloads\\gs-core-2.0.jar
+file.reference.gs-core-2.0.jar-1=libs/gs-core-2.0.jar
+file.reference.gs-ui-javafx-2.0.jar=..\\..\\..\\Downloads\\gs-ui-javafx-2.0.jar
+file.reference.gs-ui-javafx-2.0.jar-1=libs/gs-ui-javafx-2.0.jar
+file.reference.gs-ui-swing-2.0.jar=..\\..\\..\\Downloads\\gs-ui-swing-2.0.jar
+file.reference.gs-ui-swing-2.0.jar-1=libs/gs-ui-swing-2.0.jar
+file.reference.json-20240303.jar=..\\..\\..\\Downloads\\json-20240303.jar
 includes=**
+jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
-javac.classpath=
+jar.index=${jnlp.enabled}
+javac.classpath=\
+    ${file.reference.json-20240303.jar}:\
+    ${file.reference.gs-ui-swing-2.0.jar}:\
+    ${file.reference.gs-ui-javafx-2.0.jar}:\
+    ${file.reference.gs-core-2.0.jar}:\
+    ${file.reference.gs-algo-2.0.jar}:\
+    ${file.reference.AbsoluteLayout.jar}:\
+    ${file.reference.AbsoluteLayout.jar-1}:\
+    ${file.reference.gs-algo-2.0.jar-1}:\
+    ${file.reference.gs-core-2.0.jar-1}:\
+    ${file.reference.gs-ui-javafx-2.0.jar-1}:\
+    ${file.reference.gs-ui-swing-2.0.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -71,7 +98,24 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Pruebas_proyecto
-main.class=pruebas.proyecto.PruebasProyecto
+jnlp.codebase.type=no.codebase
+jnlp.descriptor=application
+jnlp.enabled=false
+jnlp.mixed.code=default
+jnlp.offline-allowed=false
+jnlp.signed=false
+jnlp.signing=
+jnlp.signing.alias=
+jnlp.signing.keystore=
+main.class=pruebas.proyecto.InterfazPrueba
+# Optional override of default Application-Library-Allowable-Codebase attribute identifying the locations where your signed RIA is expected to be found.
+manifest.custom.application.library.allowable.codebase=
+# Optional override of default Caller-Allowable-Codebase attribute identifying the domains from which JavaScript code can make calls to your RIA without security prompts.
+manifest.custom.caller.allowable.codebase=
+# Optional override of default Codebase manifest attribute, use to prevent RIAs from being repurposed
+manifest.custom.codebase=
+# Optional override of default Permissions manifest attribute (supported values: sandbox, all-permissions)
+manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
