--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,33 +36,23 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Pruebas_proyecto
 endorsed.classpath=
 excludes=
-file.reference.AbsoluteLayout.jar=C:\\Program Files\\NetBeans-23\\netbeans\\java\\modules\\ext\\AbsoluteLayout.jar
-file.reference.AbsoluteLayout.jar-1=libs/AbsoluteLayout.jar
-file.reference.gs-algo-2.0.jar=..\\..\\..\\Downloads\\gs-algo-2.0.jar
-file.reference.gs-algo-2.0.jar-1=libs/gs-algo-2.0.jar
-file.reference.gs-core-2.0.jar=..\\..\\..\\Downloads\\gs-core-2.0.jar
-file.reference.gs-core-2.0.jar-1=libs/gs-core-2.0.jar
-file.reference.gs-ui-javafx-2.0.jar=..\\..\\..\\Downloads\\gs-ui-javafx-2.0.jar
-file.reference.gs-ui-javafx-2.0.jar-1=libs/gs-ui-javafx-2.0.jar
-file.reference.gs-ui-swing-2.0.jar=..\\..\\..\\Downloads\\gs-ui-swing-2.0.jar
-file.reference.gs-ui-swing-2.0.jar-1=libs/gs-ui-swing-2.0.jar
-file.reference.json-20240303.jar=..\\..\\..\\Downloads\\json-20240303.jar
+file.reference.AbsoluteLayout.jar=AbsoluteLayout.jar
+file.reference.gs-algo-2.0.jar=gs-algo-2.0.jar
+file.reference.gs-core-2.0.jar=gs-core-2.0.jar
+file.reference.gs-ui-javafx-2.0.jar=gs-ui-javafx-2.0.jar
+file.reference.gs-ui-swing-2.0.jar=gs-ui-swing-2.0.jar
+file.reference.json-20240303__1_.jar=json-20240303 (1).jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${file.reference.json-20240303.jar}:\
+    ${file.reference.json-20240303__1_.jar}:\
     ${file.reference.gs-ui-swing-2.0.jar}:\
     ${file.reference.gs-ui-javafx-2.0.jar}:\
     ${file.reference.gs-core-2.0.jar}:\
     ${file.reference.gs-algo-2.0.jar}:\
-    ${file.reference.AbsoluteLayout.jar}:\
-    ${file.reference.AbsoluteLayout.jar-1}:\
-    ${file.reference.gs-algo-2.0.jar-1}:\
-    ${file.reference.gs-core-2.0.jar-1}:\
-    ${file.reference.gs-ui-javafx-2.0.jar-1}:\
-    ${file.reference.gs-ui-swing-2.0.jar-1}
+    ${file.reference.AbsoluteLayout.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
